@@ -89,7 +89,7 @@
 #' Sim2 <- coxsimLinear(M1, b = "stafcder", nsim = 100,
 #'                       qi = "Hazard Rate",
 #'                       Xj = c(1237, 1600))
-#' simGG(Sim2, type = 'lines')
+#' simGG(Sim2, type = 'points')
 #' }
 #'
 #' @details Uses \link{ggplot2} to plot the quantities of interest from
@@ -136,11 +136,7 @@ simGG.simlinear <- function(obj, from = NULL, to = NULL, rug = TRUE,
     qi <- class(obj)[[2]]
 
     # Create y-axis label
-    if (is.null(ylab)){
-        ylab <- paste(qi, "\n")
-    } else {
-        ylab <- ylab
-    }
+    if (is.null(ylab)) ylab <- paste(qi, "\n")
 
     # Create x-axis label
     if (qi != "Hazard Rate"){
